// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`package resolvable but not in deps: dist/typescript.cjs.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
let thing = \\"something\\";
exports.default = thing;
"
`;

exports[`package resolvable but not in deps: dist/typescript.esm.js 1`] = `
"let thing = \\"something\\";
export default thing;
"
`;

exports[`package resolvable but not in deps: package.json 1`] = `
"{
  \\"name\\": \\"typescript\\",
  \\"version\\": \\"1.0.0\\",
  \\"main\\": \\"dist/typescript.cjs.js\\",
  \\"license\\": \\"MIT\\",
  \\"private\\": true,
  \\"module\\": \\"dist/typescript.esm.js\\",
  \\"dependencies\\": {
    \\"@babel/core\\": \\"^7.4.3\\",
    \\"@babel/preset-typescript\\": \\"^7.3.3\\"
  }
}
"
`;

exports[`package resolvable but not in deps: src/index.ts 1`] = `
"let thing: string = \\"something\\";

export default thing;
"
`;
